@@ -5,7 +5,8 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Page objects: add a Plone.visit(obj) function.
+  [jone]
 
 
 1.3.1 (2013-05-24)
